improved (but not entirely solved) layout issues across devices.

--- a/src/components/Character/styles.scss
+++ b/src/components/Character/styles.scss
@@ -65,7 +65,7 @@
 
 		.content {
 			margin-top: 40vh;
-			max-width: 40em;
+			max-width: 80vw;
 			position: relative;
 		}
 
@@ -82,6 +82,7 @@
 				.name {
 					margin-bottom: 0.1em; // GUESS
 					font-size: 5em;
+					overflow-y: hidden;
 				}
 
 				.nickname {
@@ -110,7 +111,7 @@
 				}
 
 					.body {
-						width: calc(100% + 18px);
+						width: 100%;
 						margin-bottom: 4em; // GUESS
 						line-height: 1.5;
 						font-family: var(--font_family__body);
@@ -227,27 +228,36 @@
 		.container {
 			width: 100%; 
 			height: 100%;
+			position: relative;
 			overflow-y: hidden;
 		}
 
 			.content {
 				display: flex;
+				width: 100%;
+				max-width: none;
 				margin-top: 10vh;
 				flex-direction: row;
 				--body_width: 50%;
 			}
 
 				.headings {
-					width: 50%;
+					max-width: 50%;
 					padding-top: 12.5vh;
 				}
 
-				.body {
-					// width: var(--body_width);
-					height: 75vh; //GUESS
-					margin-bottom: 2em; //GUESS
-					overflow-y: scroll;
+				.scrollHider {
+					width: 50%;
+					padding-top: 12.5vh;
+					margin-left: 15%;
 				}
+
+					.body {
+						width: 100%;
+						height: 75vh; //GUESS
+						margin-bottom: 2em; //GUESS
+						overflow-y: scroll;
+					}
 
 			.content::after {
 				display: block;
@@ -291,10 +301,16 @@
 			flex-direction: column;
 		}
 
-			.body {
-				height: 25vh;
-				padding-bottom: 3.5em;
+			.scrollHider {
+				padding-top: 0;
+				margin-left: 0;
+				width: 72.5%;
 			}
+
+				.body {
+					height: 25vh;
+					padding-bottom: 3.5em;
+				}
 
 		.content::after {
 			height: 6em;
@@ -303,7 +319,7 @@
 }
 
 // Desktop landscape
-@media (min-width: 1200px) {
+@media (min-width: 1025px) {
 
 	.content {
 		margin-top: 0;
@@ -317,8 +333,13 @@
 				font-size: 3.25em;
 			}
 
-		.body {
-			height: 100%;
+
+		.scrollHider {
+			width: 62.5%;
+
+			.body {
+				height: 100%;
+			}
 		}
 
 	.content::after {
@@ -330,4 +351,11 @@
 		bottom: 0;
 	}
 }
-	
+
+// Desktop landscape 
+@media (min-width: 1025px) and (min-aspect-ratio: 16/9) {
+
+	.scrollHider {
+		width: 47.5%;
+	}
+}
